fix: grid gap

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -22,6 +22,6 @@
   }
 
   .grid-layout {
-    @apply grid grid-cols-4 gap-x-4 tablet:grid-cols-6 tablet:gap-8 desktop:max-w-7xl desktop:grid-cols-12;
+    @apply grid grid-cols-4 gap-x-4 tablet:grid-cols-6 tablet:gap-x-8 desktop:max-w-7xl desktop:grid-cols-12;
   }
 }
